--- a/xc3/build.gradle
+++ b/xc3/build.gradle
@@ -1,7 +1,7 @@
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    runtimeOnly 'org.postgresql:postgresql'
+    runtimeOnly 'mysql:mysql-connector-java:8.0.33'
 
     // To communicate with user-auth
     implementation 'org.springframework.boot:spring-boot-starter-webflux' // For WebClient
