--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -1,12 +1,8 @@
 FROM eclipse-temurin:21-jdk-jammy as builder
 WORKDIR /app
 COPY . .
-RUN ./gradlew :api-gateway:bootJar --no-daemon
+RUN ./gradlew :api-gateway:bootJar --no-daemon -x test
 
 FROM eclipse-temurin:21-jre-jammy
 COPY --from=builder /app/api-gateway/build/libs/api-gateway-*.jar /app.jar
-
-HEALTHCHECK --interval=30s --timeout=3s \
-  CMD curl -f http://localhost:8082/actuator/health || exit 1
-
 ENTRYPOINT ["java", "-jar", "/app.jar"]
