--- a/build.gradle
+++ b/build.gradle
@@ -18,15 +18,19 @@ subprojects {
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
 
-
     configurations {
         compileOnly {
             extendsFrom annotationProcessor
         }
     }
 
+    dependencyManagement {
+        imports {
+            mavenBom "org.springframework.cloud:spring-cloud-dependencies:2024.0.0"
+        }
+    }
+
     dependencies {
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
     }
-
 }
