--- a/api-gateway/build.gradle
+++ b/api-gateway/build.gradle
@@ -1,9 +1,9 @@
 dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
     implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
-
     implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
 }
