--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.cloud.gateway.routes[1].id=xc3-service
 spring.cloud.gateway.routes[1].uri=http://xc3:8080
 spring.cloud.gateway.routes[1].predicates[0]=Path=/xc3/**
 spring.cloud.gateway.routes[1].filters[0]=StripPrefix=1
+
+spring.main.allow-bean-definition-overriding=true
